--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ branches:
   only:
     - master # build master branch only
 script:
-  - hexo generate # generate static files
+  - hexo g
+  - hexo d
 deploy:
   provider: pages
   skip-cleanup: true
