--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,19 @@
 sudo: false
 language: node_js
 node_js:
-  - 10 # use nodejs v10 LTS
+ - 10 # use nodejs v10 LTS
 cache: npm
 branches:
-  only:
-    - master # build master branch only
+ only:
+  - master # build master branch only
 script:
-  - hexo clean &&  hexo generate # generate static files
+  - hexo clean
+  - hexo generate
 deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: $GH_TOKEN
-  keep-history: true
-  on:
-    branch: master
-  local-dir: public
+ provider: pages
+ skip-cleanup: true
+ github-token: $GH_TOKEN
+ keep-history: true
+ on:
+  branch: master
+ local-dir: public
