--- a/.travis.yml
+++ b/.travis.yml
@@ -1,48 +1,38 @@
-language: node_js #设置语言
-
-node_js: stable #设置相应的版本
-
+# 指定语言环境
+language: node_js
+# 指定需要sudo权限
+sudo: required
+# 指定node_js版本
+node_js: 
+  - 7.9.0
+# 指定缓存模块，可选。缓存可加快编译速度。
 cache:
- apt: true
- directories:
-  - node_modules # 缓存不经常更改的内容
+  directories:
+    - node_modules
+
+# 指定博客源码分支，因人而异。hexo博客源码托管在独立repo则不用设置此项
+branches:
+  only:
+    - hexo 
 
 before_install:
- - export TZ='Asia/Shanghai' # 更改时区
+  - npm install -g hexo-cli
 
+# Start: Build Lifecycle
 install:
- - npm install #安装hexo及插件
+  - npm install
+  - npm install hexo-deployer-git --save
 
+# 执行清缓存，生成网页操作
 script:
- - hexo clean #清除
- - hexo g && hexo d #生成
+  - hexo clean
+  - hexo generate
 
+# 设置git提交名，邮箱；替换真实token到_config.yml文件，最后depoy部署
 after_script:
- - git clone https://${GH_REF} .deploy_git # GH_REF是最下面配置的仓库地址
- - cd .deploy_git
- - git checkout master
- - cd ../
- - mv .deploy_git/.git/ ./public/ # 这一步之前的操作是为了保留master分支的提交记录，不然每次git init的话只有1条commit
- - cd ./public
- - git config user.name "gaona233" #修改name
- - git config user.email "1064193183@qq.com" #修改email
- - git add .
- - git commit -m "Travis CI Auto Builder at `date +"%Y-%m-%d %H:%M"`" # 提交记录包含时间 跟上面更改时区配合
- - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master #Travis_Token是在Travis中配置环境变量的名称
-
-branches:
- only:
-  - master #只监测master分支，master是我的分支的名称，可根据自己情况设置
-env:
- global:
-  - GH_REF: github.com/gaona233/gaona.github.io.git #设置GH_REF，注意更改yourname
-
-# configure notifications (email, IRC, campfire etc)
-# please update this section to your needs!
-# https://docs.travis-ci.com/user/notifications/
-# notifications:
-#   email:
-#     - 1147727180@qq.com
-#     - mtianyan@outlook.com
-#   on_success: change
-#   on_failure: always
+  - git config user.name "gaona233"
+  - git config user.email "1064193183@qq.com"
+  # 替换同目录下的_config.yml文件中gh_token字符串为travis后台刚才配置的变量，注意此处sed命令用了双引号。单引号无效！
+  - sed -i "s/gh_token/${GH_TOKEN}/g" ./_config.yml
+  - hexo deploy
+# End: Build LifeCycle
