--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,11 @@ before_install:
 # Start: Build Lifecycle
 install:
  - npm install
- - npm install hexo-deployer-git --save
 
 # 执行清缓存，生成网页操作
 script:
- - hexo clean && hexo generate
+ - hexo clean 
+ - hexo generate
 
 # 设置git提交名，邮箱；替换真实token到_config.yml文件，最后depoy部署
 after_script:
