--- a/.travis.yml
+++ b/.travis.yml
@@ -3,34 +3,31 @@ language: node_js
 
 # 指定node_js版本
 node_js:
- - 7.9.0
-# 指定缓存模块，可选。缓存可加快编译速度。
-cache:
- directories:
-  - node_modules
+ - '10'
 
 # 指定博客源码分支，因人而异。hexo博客源码托管在独立repo则不用设置此项
-
 before_install:
- - npm install -g hexo-cli
+  - git config user.name "gaona233"
+  - git config user.email "1064193183@qq.com"
+  - sed -i'' "s~https://github.com/<YOUR NAME>/<YOUR BLOG REPO>.git~https://${ACCESS_TOKEN}@github.com/<YOUR NAME>/<YOUR REPO>.git~" _config.yml
+  
+  install:
+  - npm install hexo-cli -g
+  - npm install
+  
+
 
 # Start: Build Lifecycle
 install:
+ - npm install -g hexo-cli
  - npm install
 
 # 执行清缓存，生成网页操作
 script:
  - hexo clean 
  - hexo generate
+ - npm run deploy
 
-# 设置git提交名，邮箱；替换真实token到_config.yml文件，最后depoy部署
-after_script:
- - git config user.name "gaona233"
- - git config user.email "1064193183@qq.com"
- # 替换同目录下的_config.yml文件中gh_token字符串为travis后台刚才配置的变量，注意此处sed命令用了双引号。单引号无效！
- - sed -i "s/gh_token/${GH_TOKEN}/g" ./_config.yml
- - hexo deploy
-# End: Build LifeCycle
 
 branches:
  only:
