--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,16 @@
-# 指定语言环境
 language: node_js
-
-# 指定node_js版本
 node_js:
-  - "10"
-
+    - '10'
 branches:
-  only:
-    - master
-
-# 指定博客源码分支，因人而异。hexo博客源码托管在独立repo则不用设置此项
+    only: [master]
 before_install:
-  - git config user.name "gaona233"
-  - git config user.email "1064193183@qq.com"
-  - sed -i'' "s~https://github.com/<YOUR NAME>/<YOUR BLOG REPO>.git~https://${ACCESS_TOKEN}@github.com/<YOUR NAME>/<YOUR REPO>.git~" _config.yml
-
-# Start: Build Lifecycle
+    - 'git config user.name "gaona233"'
+    - 'git config user.email "1064193183@qq.com"'
+    - 'sed -i'''' "s~https://github.com/<YOUR NAME>/<YOUR BLOG REPO>.git~https://${ACCESS_TOKEN}@github.com/<YOUR NAME>/<YOUR REPO>.git~" _config.yml'
 install:
-  - npm install -g hexo-cli
-  - npm install
-
-# 执行清缓存，生成网页操作
+    - 'npm install -g hexo-cli'
+    - 'npm install'
 script:
-  - hexo clean
-  - hexo generate
-  - npm run deploy
+    - 'hexo clean'
+    - 'hexo generate'
+    - 'npm run deploy'
