--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,10 @@ branches:
   - master
 
 # 指定博客源码分支，因人而异。hexo博客源码托管在独立repo则不用设置此项
-# before_install:
-#  - git config user.name "gaona233"
-#  - git config user.email "1064193183@qq.com"
+before_install:
+ - git config user.name "gaona233"
+ - git config user.email "1064193183@qq.com"
+ - sed -i'' "s~https://github.com/gaona233/gaona.github.io.git~https://${GH_TOKEN}@github.com/gaona233/gaona.github.io.git~" _config.yml
 
 # Start: Build Lifecycle
 install:
