--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ theme: hexo-theme-matery
 deploy:
   type: git
   repository: https://github.com/gaona233/gaona.github.io.git
-  branch: gh-pages
+  branch: master
 
 # 内容搜索
 search:
