--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: ''
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://github.com/gaona233/gaona.github.io
-root: /
+root: /gaona.github.io/
 # permalink: :year/:month/:day/:title/
 permalink: :title/
 permalink_defaults:
