--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: ''
 url: https://gaona.github.io
 root: /gaona.github.io/
 # permalink: :year/:month/:day/:title/
-permalink: :title/
+permalink: :title.html
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
@@ -167,3 +167,7 @@ live2d:
   react:
     opacity: 1
 
+ # 自动生成sitemap   
+
+sitemap:
+  path: sitemap.xml
